--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,11 +12,11 @@ site-twitter: #if your site has a twitter account, enter it here
 author: 黄坤 # add your name
 author-img: huangkun.jpg # add your photo
 about-author: 懦怯囚禁人的灵魂，希望可以感受自由。强者自救，圣者渡人。 # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+#social-twitter: # add your Twitter handle
+#social-facebook: # add your Facebook handle
+social-github: sudokuhk # add your Github handle
+#social-linkedin: # add your Linkedin handle
+social-email: hk2305621@126.com  # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
